<resources>
    <string name="app_name">BlogApp</string>

    <string name="hint_email">Email</string>

    <string name="hint_password">Password</string>

    <string name="login">Login</string>

    <string name="create_acct">Create Account</string>

    <string name="first_name">First Name</string>

    <string name="last_name">Last Name</string>

    <string name="username">Username</string>


</resources>
